[gd_scene load_steps=29 format=3 uid="uid://ca4tlylv3ytgd"]

[ext_resource type="Texture2D" uid="uid://demh86hifqtl8" path="res://Scenes/InteractiveObjects/Sprites/PetitePiece_SpriteSheet.png" id="1_lnoao"]
[ext_resource type="Script" path="res://Scenes/InteractiveObjects/coin.gd" id="1_wk0j4"]
[ext_resource type="Texture2D" uid="uid://dmx8ud7ml2y8y" path="res://Scenes/InteractiveObjects/Sprites/PetitePieceShadow_SpriteSheet.png" id="2_qppfk"]
[ext_resource type="AudioStream" uid="uid://cj88uiu5caqtl" path="res://Scenes/InteractiveObjects/Sound/Validation.ogg" id="4_gpkx7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3lqpe"]
atlas = ExtResource("2_qppfk")
region = Rect2(0, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5o3s"]
atlas = ExtResource("2_qppfk")
region = Rect2(0, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sqmb"]
atlas = ExtResource("2_qppfk")
region = Rect2(16, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex6o1"]
atlas = ExtResource("2_qppfk")
region = Rect2(32, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8aj4"]
atlas = ExtResource("2_qppfk")
region = Rect2(48, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_aewra"]
atlas = ExtResource("2_qppfk")
region = Rect2(64, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pw75"]
atlas = ExtResource("2_qppfk")
region = Rect2(80, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fahkv"]
atlas = ExtResource("2_qppfk")
region = Rect2(96, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l83y"]
atlas = ExtResource("2_qppfk")
region = Rect2(112, 0, 16, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ql6in"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lqpe")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5o3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sqmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex6o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8aj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aewra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pw75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fahkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l83y")
}],
"loop": false,
"name": &"rotation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yuuhl"]
atlas = ExtResource("1_lnoao")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yottv"]
atlas = ExtResource("1_lnoao")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_611tw"]
atlas = ExtResource("1_lnoao")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63hfw"]
atlas = ExtResource("1_lnoao")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gejvd"]
atlas = ExtResource("1_lnoao")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_krnwn"]
atlas = ExtResource("1_lnoao")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y5rb"]
atlas = ExtResource("1_lnoao")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxpci"]
atlas = ExtResource("1_lnoao")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y7bk"]
atlas = ExtResource("1_lnoao")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5wmwy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuuhl")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yottv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_611tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63hfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gejvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krnwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y5rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxpci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y7bk")
}],
"loop": false,
"name": &"rotation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uh8mm"]
radius = 56.0

[sub_resource type="Animation" id="Animation_oeyyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mg162"]
resource_name = "wave"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 6), Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ex177"]
_data = {
"RESET": SubResource("Animation_oeyyk"),
"wave": SubResource("Animation_mg162")
}

[node name="Coin" type="Node2D"]
script = ExtResource("1_wk0j4")

[node name="ShadowSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(0, 18)
sprite_frames = SubResource("SpriteFrames_ql6in")
animation = &"rotation"

[node name="CoinSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_5wmwy")
animation = &"rotation"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uh8mm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gpkx7")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ex177")
}

[node name="SpawnDurationTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="state_changed" from="." to="." method="_on_state_changed"]
[connection signal="animation_finished" from="CoinSprite" to="." method="_on_coin_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnDurationTimer" to="." method="_on_spawn_duration_timer_timeout"]
